feat: add initial list of beta 2 changes

--- a/src/pages/migrating/guide/develop.mdx
+++ b/src/pages/migrating/guide/develop.mdx
@@ -31,26 +31,27 @@ possible by detailing all of the updates below.
 
 ## Changelog
 
-| Feature                   | <div style="width:100px">Status</div> | Migrate                                | Packages or components impacted                                                         |
-| ------------------------- | ------------------------------------- | -------------------------------------- | --------------------------------------------------------------------------------------- |
-| `@carbon/react`           | <Tag type="cyan">Breaking</Tag>       | [Components](#components-breaking)     | `carbon-components-react` `carbon-icons` `carbon-components`                            |
-| `@carbon/styles`          | <Tag type="cyan">Breaking</Tag>       | [Styles](#styles-breaking)             | `carbon-components` `@carbon/react` `carbon-components-angular` `carbon-components-vue` |
-| Color Tokens              | <Tag type="cyan">Breaking</Tag>       | [Color tokens](#color-tokens-breaking) | All components                                                                          |
-| CSS Grid                  | <Tag type="cyan">Breaking</Tag>       | [CSS Grid](#css-grid-breaking)         | `@carbon/grid` `Grid` `Row` `Column`                                                    |
-| Layer Component           | <Tag type="cyan">Breaking</Tag>       | [Layering](#layer-component-breaking)  | Components using `light` prop                                                           |
-| Theme Component           | <Tag type="green">New</Tag>           | [Theming](#theme-component-new)        |                                                                                         |
-| `carbon-icons`            | <Tag type="red">Deprecated</Tag>      | [Components](#components-breaking)     |                                                                                         |
-| `carbon-components`       | <Tag type="red">Deprecated</Tag>      | [Styles](#styles-breaking)             |                                                                                         |
-| `carbon-components-react` | <Tag type="red">Deprecated</Tag>      | [Components](#components-breaking)     |                                                                                         |
-
-<!-- to do: add rows for
-- component size props breaking changes
-- @carbon/icons-react breaking changes (size prop)
-- @carbon/icons-react breaking changes
-- tooltip breaking changes?
-- popover new feature?
-- other component API specific new features?
- -->
+| Feature                    | <div style="width:100px">Status</div> | Migrate                                | Packages or components impacted                                                         |
+| -------------------------- | ------------------------------------- | -------------------------------------- | --------------------------------------------------------------------------------------- |
+| `@carbon/react`            | <Tag type="cyan">Breaking</Tag>       | [Components](#components-breaking)     | `carbon-components-react` `carbon-icons` `carbon-components`                            |
+| `@carbon/styles`           | <Tag type="cyan">Breaking</Tag>       | [Styles](#styles-breaking)             | `carbon-components` `@carbon/react` `carbon-components-angular` `carbon-components-vue` |
+| Color Tokens               | <Tag type="cyan">Breaking</Tag>       | [Color tokens](#color-tokens-breaking) | All components                                                                          |
+| CSS Grid                   | <Tag type="cyan">Breaking</Tag>       | [CSS Grid](#css-grid-breaking)         | `@carbon/react` `@carbon/grid`                                                          |
+| Component `size` prop      | <Tag type="cyan">Breaking</Tag>       | [CSS Grid](#css-grid-breaking)         | `@carbon/react` components that have different size variations                          |
+| Icons `size` prop          | <Tag type="cyan">Breaking</Tag>       | [CSS Grid](#css-grid-breaking)         | `@carbon/react/icons` `@carbon/icons-react` All icons                                   |
+| Component `className` prop | <Tag type="cyan">Breaking</Tag>       | [CSS Grid](#css-grid-breaking)         | `@carbon/react`                                                                         |
+| Event handlers             | <Tag type="cyan">Breaking</Tag>       | [CSS Grid](#css-grid-breaking)         | `@carbon/react`                                                                         |
+| Notification               | <Tag type="cyan">Breaking</Tag>       | [CSS Grid](#css-grid-breaking)         | `@carbon/react`                                                                         |
+| Tooltip                    | <Tag type="cyan">Breaking</Tag>       | [CSS Grid](#css-grid-breaking)         | `@carbon/react`                                                                         |
+| ContentSwitcher            | <Tag type="cyan">Breaking</Tag>       | [CSS Grid](#css-grid-breaking)         | `@carbon/react`                                                                         |
+| Layer Component            | <Tag type="cyan">Breaking</Tag>       | [Layering](#layer-component-breaking)  | Components using `light` prop                                                           |
+| Theme Component            | <Tag type="green">New</Tag>           | [Theming](#theme-component-new)        |                                                                                         |
+| Popover                    | <Tag type="green">New</Tag>           | [Theming](#theme-component-new)        |                                                                                         |
+| ToggleTip                  | <Tag type="green">New</Tag>           | [Theming](#theme-component-new)        |                                                                                         |
+| Dialog                     | <Tag type="green">New</Tag>           | [Theming](#theme-component-new)        |                                                                                         |
+| `carbon-icons`             | <Tag type="red">Deprecated</Tag>      | [Components](#components-breaking)     |                                                                                         |
+| `carbon-components`        | <Tag type="red">Deprecated</Tag>      | [Styles](#styles-breaking)             |                                                                                         |
+| `carbon-components-react`  | <Tag type="red">Deprecated</Tag>      | [Components](#components-breaking)     |                                                                                         |
 
 ## Components <Tag type="cyan">Breaking</Tag>
 
@@ -91,7 +92,8 @@ yarn remove carbon-components carbon-components-react carbon-icons
 While this release is still in beta, you may have to keep `carbon-components`,
 `carbon-components-react` and `carbon-icons` installed since `@carbon/react` is
 importing them. In the future, these will be included as peer dependencies in
-the package, and you won't have to install them.
+the package, and you won't have to install them. A minimum of Node `v14` is also
+required to update.
 
 </InlineNotification>
 
