--- a/src/pages/components/modal/style.mdx
+++ b/src/pages/components/modal/style.mdx
@@ -23,8 +23,8 @@ styling in the transactional modal.
 
 ## Typography
 
-Modal headings and labels should be set in sentence case. Keep all headings and
-labels concise and to the point. Modal labels are optional.
+Modal labels and headings should be set in sentence case. Keep all labels and
+headings concise and to the point. Modal labels are optional.
 
 | Element | Font-size (px/rem) | Font-weight   | Type token    |
 | ------- | ------------------ | ------------- | ------------- |
