--- a/src/pages/components/structured-list/style.mdx
+++ b/src/pages/components/structured-list/style.mdx
@@ -29,10 +29,10 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 Structured list headings should be set in title case, while all other text is
 set in sentence case. All typography is left aligned.
 
-| Element   | Font-size (px/rem) | Font-weight     | Type token            |
-| --------- | ------------------ | --------------- | --------------------- |
-| Heading   | 14 / 0.875         | Semi-Bold / 600 | `$heading-compact-01` |
-| List text | 14 / 0.875         | Regular / 400   | `$body-01`            |
+| Element   | Font-size (px/rem) | Font-weight    | Type token            |
+| --------- | ------------------ | -------------- | --------------------- |
+| Heading   | 14 / 0.875         | SemiBold / 600 | `$heading-compact-01` |
+| List text | 14 / 0.875         | Regular / 400  | `$body-01`            |
 
 ## Structure
 
