--- a/src/pages/components/tabs/style.mdx
+++ b/src/pages/components/tabs/style.mdx
@@ -159,7 +159,7 @@ Tab labels should be set in sentence case, and should not exceed three words.
 
 | Element         | Font-size (px/rem) | Font-weight    | Type token            |
 | --------------- | ------------------ | -------------- | --------------------- |
-| Label; enabled  | 14 / 0.875         | Regular / 400  | `$body-compact-01`    |
+| Label: enabled  | 14 / 0.875         | Regular / 400  | `$body-compact-01`    |
 | Label: selected | 14 / 0.875         | SemiBold / 600 | `$heading-compact-01` |
 
 ## Structure
