--- a/src/pages/components/select/style.mdx
+++ b/src/pages/components/select/style.mdx
@@ -50,7 +50,7 @@ and any proper nouns capitalized. Select text should be three words or less.
 
 | Element       | Font-size (px/rem) | Font-weight   | Type token         |
 | ------------- | ------------------ | ------------- | ------------------ |
-| Label         | 12 / 0. 75         | Regular / 400 | `$label-01`        |
+| Label         | 12 / 0.75          | Regular / 400 | `$label-01`        |
 | Field text    | 14 / 0.875         | Regular / 400 | `$body-compact-01` |
 | Error message | 12 / 0.75          | Regular / 400 | `$label-01`        |
 
