--- a/src/pages/components/tooltip/style.mdx
+++ b/src/pages/components/tooltip/style.mdx
@@ -46,7 +46,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 Tooltip labels and text should be set in sentence case.
 
-| Property  | Font-size (px/rem) | Font-weight   | Type token         |
+| Element   | Font-size (px/rem) | Font-weight   | Type token         |
 | --------- | ------------------ | ------------- | ------------------ |
 | Label     | 12 / 0.75          | Regular / 400 | `$label-01`        |
 | Body text | 14 / 0.875         | Regular / 400 | `$body-compact-01` |
