--- a/src/pages/components/overflow-menu/code.mdx
+++ b/src/pages/components/overflow-menu/code.mdx
@@ -67,14 +67,15 @@ usage documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-overflowmenu--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-overflow-menu--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvoverflowmenu--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvoverflowmenu--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=overflow-menu',
     }}>{`
     <OverflowMenu
-      selectorPrimaryFocus="option-two"
+      data-floating-menu-container
+      selectorPrimaryFocus={'.optionOne'}
     >
       <OverflowMenuItem
+        className="optionOne"
         itemText="Option 1"
       />
       <OverflowMenuItem
