--- a/src/pages/components/overflow-menu/usage.mdx
+++ b/src/pages/components/overflow-menu/usage.mdx
@@ -46,14 +46,15 @@ there is a space constraint.
         'https://react.carbondesignsystem.com/?path=/story/components-overflowmenu--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-overflow-menu--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvoverflowmenu--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvoverflowmenu--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=overflow-menu',
     }}>{`
     <OverflowMenu
-      selectorPrimaryFocus={'.optionTwo'}
+      data-floating-menu-container
+      selectorPrimaryFocus={'.optionOne'}
     >
       <OverflowMenuItem
+        className="optionOne"
         itemText="Option 1"
       />
       <OverflowMenuItem
