feat(docs): updated some docs for v11 miration

--- a/src/pages/migrating/guide/develop.mdx
+++ b/src/pages/migrating/guide/develop.mdx
@@ -38,7 +38,7 @@ possible by detailing all of the updates below.
 | Color Tokens               | <Tag type="cyan">Breaking</Tag>       | [Color tokens](#color-tokens-breaking) | All components                                                                          |
 | CSS Grid                   | <Tag type="cyan">Breaking</Tag>       | [CSS Grid](#css-grid-breaking)         | `@carbon/react` `@carbon/grid`                                                          |
 | Component `size` prop      | <Tag type="cyan">Breaking</Tag>       | [CSS Grid](#css-grid-breaking)         | `@carbon/react` components that have different size variations                          |
-| Icons `size` prop          | <Tag type="cyan">Breaking</Tag>       | [CSS Grid](#css-grid-breaking)         | `@carbon/react/icons` `@carbon/icons-react` All icons                                   |
+| Icons `size` prop          | <Tag type="cyan">Breaking</Tag>       | [Icons size prop](#icon-size-prop)     | `@carbon/react/icons` `@carbon/icons-react` All icons                                   |
 | Component `className` prop | <Tag type="cyan">Breaking</Tag>       | [CSS Grid](#css-grid-breaking)         | `@carbon/react`                                                                         |
 | Event handlers             | <Tag type="cyan">Breaking</Tag>       | [CSS Grid](#css-grid-breaking)         | `@carbon/react`                                                                         |
 | Notification               | <Tag type="cyan">Breaking</Tag>       | [CSS Grid](#css-grid-breaking)         | `@carbon/react`                                                                         |
@@ -46,9 +46,9 @@ possible by detailing all of the updates below.
 | ContentSwitcher            | <Tag type="cyan">Breaking</Tag>       | [CSS Grid](#css-grid-breaking)         | `@carbon/react`                                                                         |
 | Layer Component            | <Tag type="cyan">Breaking</Tag>       | [Layering](#layer-component-breaking)  | Components using `light` prop                                                           |
 | Theme Component            | <Tag type="green">New</Tag>           | [Theming](#theme-component-new)        |                                                                                         |
-| Popover                    | <Tag type="green">New</Tag>           | [Theming](#theme-component-new)        |                                                                                         |
-| ToggleTip                  | <Tag type="green">New</Tag>           | [Theming](#theme-component-new)        |                                                                                         |
-| Dialog                     | <Tag type="green">New</Tag>           | [Theming](#theme-component-new)        |                                                                                         |
+| Popover                    | <Tag type="green">New</Tag>           | [New components](#popover)             | `@carbon/react` `carbon-components`                                                     |
+| ToggleTip                  | <Tag type="green">New</Tag>           | [New components](#toggle-tip)          | `@carbon/react` `carbon-components`                                                     |
+| Dialog                     | <Tag type="green">New</Tag>           | [New components](#dialog)              | `@carbon/react` `carbon-components`                                                     |
 | `carbon-icons`             | <Tag type="red">Deprecated</Tag>      | [Components](#components-breaking)     |                                                                                         |
 | `carbon-components`        | <Tag type="red">Deprecated</Tag>      | [Styles](#styles-breaking)             |                                                                                         |
 | `carbon-components-react`  | <Tag type="red">Deprecated</Tag>      | [Components](#components-breaking)     |                                                                                         |
@@ -467,6 +467,58 @@ Here is an example of how you can use the `Theme` component:
 
 To learn more about how our `Theme` component works with our `useTheme` hook,
 checkout our resource link below.
+
+## Updates to `@carbon/icons-react`
+
+We have two new changes to our `@carbon/icons-react` package. We have updated
+the default prop size and the way it can be imported.
+
+### Icon size prop
+
+We are updating the default size prop for all icons to `md`.
+
+### Importing
+
+All icons can now be imported from `@carbon/react/icons`. In v11, you'll still
+be able to access `@carbon/icons-react`, however it is available directly from
+the `@carbon/react` package, by default.
+
+Here is an example of how to import an icon:
+
+```
+import { Add } from '@carbon/react/icons';
+
+```
+
+## New Components
+
+We are releasing a few new components that complement the our accessibility
+initiatives and component changes.
+
+### Popover
+
+This component primitive is most similar a tile or card. However, Popover is a
+primitive consumed by other components to render content. Popover components can
+also be referred to as Disclosures, and will be accomodate a lot of the changes
+being made in our Tooltip component.
+
+Learn more about our Popover component and it's api below:
+
+<Row className="resource-card-group">
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="Popover"
+    href="https://github.com/carbon-design-system/carbon/tree/main/packages/react/src/components/Popover">
+    <MdxIcon name="github" />
+
+![Carbon icon](images/carbon.svg)
+
+  </ResourceCard>
+</Column>
+</Row>
+### ToggleTip
+
+### Dialog
 
 ### Resources
 
