--- a/src/pages/migrating/guide/overview.mdx
+++ b/src/pages/migrating/guide/overview.mdx
@@ -53,8 +53,8 @@ use.
 - **Component updates:** While working with IBM Accessibility group we have
   focused on updating the following accessibility primitives: Notification,
   Tooltip and Content Switcher.
-- **Changes to `@carbon/icons-react`:** We are updating the default size to
-  `medium` automatically included in the `@carbon/react` package.
+- **Changes to `@carbon/icons-react`:** We are updating the default size to `md`
+  automatically included in the `@carbon/react` package.
 - **New Components:** We have some exciting new components! Here they are:
   Popover, Tooltip, Dialog.
 
