feat(docs): updated some docs for v11 miration - small typo

--- a/src/pages/migrating/guide/develop.mdx
+++ b/src/pages/migrating/guide/develop.mdx
@@ -502,7 +502,7 @@ primitive consumed by other components to render content. Popover components can
 also be referred to as Disclosures, and will be accomodate a lot of the changes
 being made in our Tooltip component.
 
-Learn more about our Popover component and it's api below:
+Learn more about our Popover component and it's API below:
 
 <Row className="resource-card-group">
 <Column colLg={4} colMd={4} noGutterSm>
